# damage_cutoff_simulator

./: .gitignore  build.py  main.py  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py
app/backend/: cos.py  ocr.py  restart.py  restart_cos.py  simulation.py  skill_order.py
app/frontend/: callbacks.py  layout.py
assets/: cos.js  simulation.js  sortable.js  style.css
docs/: ba_skill_order.py  cutoff.md  discrete.md  edge.md  fejer.md  gilpelaez.md  manual.md  product.md  restart_cos.md  saddlepoint.md
experiments/: cos_app.py  cos_compare.py  cutoff_conditional.py  cutoff_maidalice_allcrit.py  cutoff_split_tangent.py  cutoff_split_tangent_d42.py  discrete_cos_compare.py  edgeworth_animation.py  edgeworth_app.py  fft_app.py  fft_compare.py  irwinhall_exact.py  lr_deeptail.py  preset1_edgeworth_vs_mc.py  preset1_inversion_compare.py  preset1_irwinhall_compare.py  preset_discrete_compare.py  preset_gebura_irwinhall_compare.py  product_cos.py  product_cos_app.py  product_irwinhall_exact.py  product_saddlepoint_compare.py  saddlepoint_compare.py  tilted_cos_compare.py
samples/: mika.json  screenshot_input.json
tests/: test_cos.py  test_ocr.py  test_restart_cos.py  test_simulation.py  test_skill_order.py
